--- a/home7/HW2/index.html
+++ b/home7/HW2/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WH6-5</title>
+    <title>WH7-2</title>
 </head>
 
 <body>
+    <div id="divID"></div>
     <script src="./functionjs.js" async></script>
 </body>
 
