--- a/home8/HW7/index.html
+++ b/home8/HW7/index.html
@@ -3,10 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WH7-5</title>
+    <title>WH8-7</title>
 </head>
 
 <body>
+    <div>
+        <input placeholder="px" type="text"><button>Start</button>
+        <div id="IdDota"></div>
+    </div>
+
+
     <script src="./functionjs.js" async></script>
 </body>
 
