--- a/home8/HW4/index.html
+++ b/home8/HW4/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WH7-4</title>
+    <title>WH8-4</title>
 </head>
 
 <body>
+    <input type="text">
+    <button>button </button>
     <script src="./functionjs.js" async></script>
 </body>
 
