--- a/home12/HW1/index.html
+++ b/home12/HW1/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>WH11-1</title>
+    <title>WH12-1</title>
 </head>
 
 <body>
-    <script src="./functionjs.js" async></script>
+    <script src="./app1.js" async></script>
 </body>
 
 </html>
